fix text overflow with word-break

--- a/src/sass/components/_content-list.scss
+++ b/src/sass/components/_content-list.scss
@@ -95,6 +95,7 @@
         margin-bottom: 0;
         overflow: hidden;
         text-overflow: ellipsis;
+        word-break: break-word;
     }
 
     .date {
